methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:8: error: not found: value C
        faireV(C(k))
               ^